<resources>
    <string name="app_name">CSE Student Mate</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="username_title">Username</string>
    <string name="full_name_title">Full Name</string>
    <string name="contact_title">Contact No</string>
    <string name="password_title">Password</string>
    <string name="email_title">Email</string>
    <string name="confirm_password_title">Confirm password</string>
    <string name="sign_in_title">Sign in</string>
    <string name="sign_up_title">Sign up</string>
    <string name="forget_password_title">Forget Password?</string>
    <string name="no_account_title">Create new account</string>

    <string name="login_title">Student Login</string>
    <string name="registration_title">Student Registration</string>

    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_class">Class</string>
    <string name="nav_nu_result">NU Result</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_help">Help</string>
    <string name="nav_support">Support</string>


    <string name="nav_open_drawer">Open Navigation Drawer</string>
    <string name="nav_close_drawer">Close Navigation Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notesEmptyMessage">Note list is empty</string>
    <string name="remindersEmptyMessage">Reminder list is empty</string>

    <string name="none">None</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="details">Details</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
</resources>
