<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationPage"
    android:background="@drawable/theme"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="236dp"
        android:layout_marginRight="236dp"
        android:src="@drawable/background_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginLeft="204dp"
        android:layout_marginBottom="304dp"
        android:src="@drawable/background_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginLeft="204dp"
        android:layout_marginTop="380dp"
        android:src="@drawable/background_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            >

        </LinearLayout>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/Logintheme"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusBottomStart="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusTopEnd="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusTopStart="@dimen/loginTextBoxCorner"
                    android:textColorHint="@android:color/darker_gray"
                    android:layout_marginBottom="5dp"
                    app:boxStrokeColor="@android:color/darker_gray"
                    app:boxStrokeWidth="3dp"
                    app:counterMaxLength="30"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fullnameId"
                        android:layout_width="@dimen/boxWidthMedium"
                        android:layout_height="@dimen/boxheightMedium"
                        android:hint="@string/full_name_title"
                        android:textColorHint="@android:color/white"
                        android:textSize="@dimen/loginTextSizeMedium"
                        android:textColor="@android:color/white"
                        android:singleLine="true"
                        android:drawableEnd="@drawable/ic_full_name_text_24dp"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusBottomStart="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusTopEnd="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusTopStart="@dimen/loginTextBoxCorner"
                    android:textColorHint="@android:color/darker_gray"
                    android:layout_marginBottom="5dp"
                    app:boxStrokeColor="@android:color/darker_gray"
                    app:boxStrokeWidth="3dp"
                    app:counterMaxLength="20"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/registerUsernameId"
                        android:layout_width="@dimen/boxWidthMedium"
                        android:layout_height="@dimen/boxheightMedium"
                        android:hint="@string/username_title"
                        android:textColorHint="@android:color/white"
                        android:textSize="@dimen/loginTextSizeMedium"
                        android:textColor="@android:color/white"
                        android:singleLine="true"
                        android:drawableEnd="@drawable/username_white_24dp"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusBottomStart="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusTopEnd="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusTopStart="@dimen/loginTextBoxCorner"
                    android:textColorHint="@android:color/darker_gray"
                    android:layout_marginBottom="5dp"
                    app:boxStrokeColor="@android:color/darker_gray"
                    app:boxStrokeWidth="3dp"
                    app:counterMaxLength="30"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/emailId"
                        android:layout_width="@dimen/boxWidthMedium"
                        android:layout_height="@dimen/boxheightMedium"
                        android:hint="@string/email_title"
                        android:textColorHint="@android:color/white"
                        android:textSize="@dimen/loginTextSizeMedium"
                        android:textColor="@android:color/white"
                        android:singleLine="true"
                        android:drawableEnd="@drawable/ic_email_white_24dp"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusBottomStart="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusTopEnd="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusTopStart="@dimen/loginTextBoxCorner"
                    android:textColorHint="@android:color/darker_gray"
                    android:layout_marginBottom="5dp"
                    app:boxStrokeColor="@android:color/darker_gray"
                    app:boxStrokeWidth="3dp"
                    app:counterMaxLength="30"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/contactNoId"
                        android:layout_width="@dimen/boxWidthMedium"
                        android:layout_height="@dimen/boxheightMedium"
                        android:hint="@string/contact_title"
                        android:textColorHint="@android:color/white"
                        android:textSize="@dimen/loginTextSizeMedium"
                        android:textColor="@android:color/white"
                        android:singleLine="true"
                        android:drawableEnd="@drawable/ic_phone_white_24dp"
                        android:inputType="phone"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusBottomStart="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusTopEnd="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusTopStart="@dimen/loginTextBoxCorner"
                    android:textColorHint="@android:color/darker_gray"
                    app:boxStrokeColor="@android:color/darker_gray"
                    app:passwordToggleTint="@android:color/white"
                    app:passwordToggleEnabled="true"
                    app:boxStrokeWidth="3dp"
                    android:layout_marginBottom="5dp"
                    app:counterMaxLength="30"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/registerPasswordId"
                        android:layout_width="@dimen/boxWidthMedium"
                        android:layout_height="@dimen/boxheightMedium"
                        android:hint="@string/password_title"
                        android:textColorHint="@android:color/white"
                        android:textSize="@dimen/loginTextSizeMedium"
                        android:textColor="@android:color/white"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusBottomStart="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusTopEnd="@dimen/loginTextBoxCorner"
                    app:boxCornerRadiusTopStart="@dimen/loginTextBoxCorner"
                    android:textColorHint="@android:color/darker_gray"
                    app:boxStrokeColor="@android:color/darker_gray"
                    app:passwordToggleTint="@android:color/white"
                    app:passwordToggleEnabled="true"
                    app:boxStrokeWidth="3dp"
                    app:counterMaxLength="30"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/confirmPasswordId"
                        android:layout_width="@dimen/boxWidthMedium"
                        android:layout_height="@dimen/boxheightMedium"
                        android:hint="@string/confirm_password_title"
                        android:textColorHint="@android:color/white"
                        android:textSize="@dimen/loginTextSizeMedium"
                        android:textColor="@android:color/white"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>



                <Button
                    android:id="@+id/signUpId"
                    android:layout_width="@dimen/boxWidthMedium"
                    android:layout_height="@dimen/boxheightMedium"
                    android:background="@drawable/login_button_theme"
                    android:text="@string/sign_up_title"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/loginTextSizeMedium"
                    android:layout_margin="20dp"
                    />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>



    </LinearLayout>



</android.support.constraint.ConstraintLayout>